syntax = "proto3";

package ledger;

import "google/type/money.proto";

message SearchRequest {
  string query = 1;
};

enum LedgerType {
  ASSET = 0;
  LIABILITY = 1;
  INCOME = 2;
  EXPENSE = 3;
  CAPITAL = 4;
}

message Ledger {
  string reference = 1;
  LedgerType type = 2;
  string parent = 3;
  map<string, string> data = 4;
}

message Account {
  string reference = 1;
  string ledger = 3;
  google.type.Money balance = 4;
  map<string, string> data = 5;
};

message TransactionEntry{
  string account = 1;
  google.type.Money amount = 2;
  bool credit = 3;
}

message Transaction {
  string reference = 1;
  string currency = 2;
  string transacted_at = 3;
  map<string, string> data = 4;
  repeated TransactionEntry entries = 5;
}


// The ledger service definition.
service LedgerService {

  // Searches for an ledger based on details
  rpc SearchLedgers(SearchRequest) returns (stream Ledger) {}

  // Creates a new ledger based on supplied data
  rpc CreateLedger(Ledger) returns (Ledger) {}

  // Updates the data component of the ledger.
  rpc UpdateLedger(Ledger) returns (Ledger) {}

  // Searches for an account based on details
  rpc SearchAccounts(SearchRequest) returns (stream Account) {}

  // Creates a new account based on supplied data
  rpc CreateAccount(Account) returns (Account) {}

  // Updates the data component of the account.
  rpc UpdateAccount(Account) returns (Account) {}

  // Searches for a transaction based on details
  rpc SearchTransactions(SearchRequest) returns (stream Transaction) {}

  // Creates a new transaction
  rpc CreateTransaction(Transaction) returns (Transaction){}

  // Reverses a transaction by creating a new one with inverted entries
  rpc ReverseTransaction(Transaction) returns (Transaction){}

  // Updates a transaction's details
  rpc UpdateTransaction(Transaction) returns (Transaction){}
}

